[package]
name = "play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aiken-lang = { git = "https://github.com/aiken-lang/aiken.git", branch = "playground" }
uplc = { git = "https://github.com/aiken-lang/aiken.git", branch = "playground" }
getrandom = { version = "0.2.9", features = ["js"] }
indexmap = "1.9.2"
leptos = { version = "0.2.5", features = ["stable"] }
leptos-icons = { git = "https://github.com/Carlosted/leptos-icons.git", features = [
    "RiAlertSystemLine",
    "RiBook2DocumentFill",
    "RiCpuDeviceLine",
    "RiDatabase2DeviceLine",
    "RiDiscordLogosFill",
    "RiErrorWarningSystemLine",
    "RiGithubLogosFill",
    "RiPlayMediaFill",
    "RiSettings3SystemFill",
    "RiShareForwardSystemFill",
] }
monaco = { git = "https://github.com/siku2/rust-monaco.git" }
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61" }
miette = "5.8.0"
js-sys = "0.3.61"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
